change air drop data use sha256

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,6 +5,7 @@ target 'ViteBusiness_Example' do
   pod 'ViteBusiness', :path => '../'
   pod 'ViteUtils', :git => 'https://github.com/vitelabs/vite-utils-ios.git', :commit => '62af5410efd9368709b8fe6e4cfbf15616474ef5'
   pod 'ViteWallet', :git => 'https://github.com/vitelabs/vite-wallet-ios.git', :commit => 'c395465dfb62d9097e29ee9da076e4761788b324'
+  pod 'ViteEthereum', :git => 'https://github.com/vitelabs/vite-ethereum-ios.git'
 
   target 'ViteBusiness_Tests' do
     inherit! :search_paths
