--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,7 @@ target 'ViteBusiness_Example' do
   pod 'ViteUtils', :git => 'https://github.com/vitelabs/vite-utils-ios.git', :commit => '62af5410efd9368709b8fe6e4cfbf15616474ef5'
   pod 'ViteWallet', :git => 'https://github.com/vitelabs/vite-wallet-ios.git', :commit => 'c395465dfb62d9097e29ee9da076e4761788b324'
   pod 'ViteEthereum', :git => 'https://github.com/vitelabs/vite-ethereum-ios.git'
+  pod 'Vite_GrinWallet', :git => 'https://github.com/vitelabs/Vite_GrinWallet.git', :commit => 'b5adab3114a69269dc60e4f35f20d2376eb67cf6'
 
   target 'ViteBusiness_Tests' do
     inherit! :search_paths
