--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,19 +1,78 @@
 platform :ios, '11.0'
 use_frameworks!
-source 'https://github.com/CocoaPods/Specs.git'
 
 target 'ViteBusiness_Example' do
   pod 'ViteBusiness', :path => '../'
 
-#  pod 'ViteWallet', :path => '../../vite-wallet-ios/'
-  pod 'ViteWallet', :git => 'https://github.com/vitelabs/vite-wallet-ios.git', :commit => 'f30415aa31802addfe3c114a428415de11673aad'
+  pod 'ViteWallet', :path => '../../vite-wallet-ios/'
+#  pod 'ViteWallet', :git => 'https://github.com/vitelabs/vite-wallet-ios.git', :commit => 'f30415aa31802addfe3c114a428415de11673aad'
 
 
   pod 'Vite_GrinWallet', :git => 'https://github.com/vitelabs/Vite_GrinWallet.git', :commit => '1aafb1f0b39c67fe37a98b5b9d17b7f4870c93dd'
   pod 'Vite_HDWalletKit', :git => 'https://github.com/vitelabs/vite-keystore-ios.git', :commit => 'afd57479c20f6514fb20f47cb0c011db7d471457'
-
   pod 'BinanceChain', :git => 'https://github.com/buckcao/SwiftBinanceChain.git'
-  
+
+  pod 'SnapKit', '~> 4.0.0'
+  pod 'BigInt', '~> 4.0'
+  pod 'R.swift', '5.0.0.alpha.3'
+  pod 'JSONRPCKit', '~> 3.0.0'
+  pod 'PromiseKit', '~> 6.8.4'
+  pod 'APIKit'
+  pod 'ObjectMapper'
+  pod 'MBProgressHUD'
+  pod 'KeychainSwift', '13.0.0'
+  pod 'Moya'
+  pod 'MJRefresh', '3.1.15.7'
+  pod 'KMNavigationBarTransition'
+  pod 'XCGLogger', '~> 7.0'
+  pod 'pop', '~> 1.0'
+  pod 'DACircularProgress', '2.3.1'
+  pod 'Kingfisher', '~> 4.0'
+  pod 'NYXImagesKit', '2.3'
+
+  #request
+  pod 'SwiftyJSON'
+
+  #statistics
+  pod 'BaiduMobStat'
+
+  #UI Control
+  pod 'ActionSheetPicker-3.0'
+  pod 'MBProgressHUD'
+  pod 'Toast-Swift', '~> 4.0.1'
+  pod 'RazzleDazzle'
+  pod 'CHIPageControl'
+
+  #table static form
+  pod 'Eureka', '~> 4.3.0'
+
+  #RX
+  pod 'RxSwift', '~> 4.0'
+  pod 'RxCocoa'
+  pod 'RxDataSources', '~> 3.0'
+  pod 'NSObject+Rx'
+  pod 'RxOptional'
+  pod 'RxGesture'
+  pod 'Then'
+  pod 'Action'
+  pod 'ReusableKit', '~> 2.1.0'
+  pod 'ReactorKit'
+
+  #code review
+  pod 'SwiftLint', '0.31.0'
+
+  #crash
+  pod 'Fabric'
+  pod 'Crashlytics'
+  pod 'Firebase/Core'
+  pod 'Firebase/Analytics'
+  pod 'Firebase/Performance'
+  pod 'Firebase/RemoteConfig'
+
+  pod 'Bagel', '~>  1.3.2'
+
+  pod 'FSPagerView'
+
   target 'ViteBusiness_Tests' do
     inherit! :search_paths
     pod 'R.swift', '5.0.0.alpha.3'
