--- a/Example/ViteBusiness.xcodeproj/xcshareddata/xcschemes/UpdateRswift.xcscheme
+++ b/Example/ViteBusiness.xcodeproj/xcshareddata/xcschemes/UpdateRswift.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "1330"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-               BuildableName = "ViteBusiness_Example.app"
-               BlueprintName = "ViteBusiness_Example"
-               ReferencedContainer = "container:ViteBusiness.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "ViteBusiness_Tests.xctest"
-               BlueprintName = "ViteBusiness_Tests"
+               BlueprintIdentifier = "8E7675C721C3936300FD22AC"
+               BuildableName = "UpdateRswift.app"
+               BlueprintName = "UpdateRswift"
                ReferencedContainer = "container:ViteBusiness.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -41,26 +27,7 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "ViteBusiness_Example.app"
-            BlueprintName = "ViteBusiness_Example"
-            ReferencedContainer = "container:ViteBusiness.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "607FACE41AFB9204008FA782"
-               BuildableName = "ViteBusiness_Tests.xctest"
-               BlueprintName = "ViteBusiness_Tests"
-               ReferencedContainer = "container:ViteBusiness.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -77,9 +44,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "ViteBusiness_Example.app"
-            BlueprintName = "ViteBusiness_Example"
+            BlueprintIdentifier = "8E7675C721C3936300FD22AC"
+            BuildableName = "UpdateRswift.app"
+            BlueprintName = "UpdateRswift"
             ReferencedContainer = "container:ViteBusiness.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -94,9 +61,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "607FACCF1AFB9204008FA782"
-            BuildableName = "ViteBusiness_Example.app"
-            BlueprintName = "ViteBusiness_Example"
+            BlueprintIdentifier = "8E7675C721C3936300FD22AC"
+            BuildableName = "UpdateRswift.app"
+            BlueprintName = "UpdateRswift"
             ReferencedContainer = "container:ViteBusiness.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
